@@ -11,6 +11,7 @@ Curl and libcurl 7.15.5
 
 This release includes the following changes:
 
+ o added curl_formget()
  o added CURLOPT_MAX_SEND_SPEED_LARGE and CURLOPT_MAX_RECV_SPEED_LARGE
  o configure --enable-hidden-symbols
 
@@ -31,6 +32,6 @@ New curl mirrors:
 This release would not have looked like this without help, code, reports and
 advice from friends like these:
 
- Dan Fandrich, Peter Silva, Arve Knudsen
+ Dan Fandrich, Peter Silva, Arve Knudsen, Michael Wallner
 
         Thanks! (and sorry if I forgot to mention someone)
